# DynaMeta

./: .coverage  .gitattributes  .gitignore  HANDOFF.md  Makefile  NOTICE  README.md  RECALIBRATION_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DynaMeta_QD_SOA_extension_spec.md  amp_generality_2026-07-18.md  dielectrics.md  enz_bic_nonlinear_roadmap.md  fdtd_engine_roadmap.md  fiber_amp_model_spec.md  implementation_notes.md  installing_hypre_windows.md  lumenairy_rcwa_port_wishlist.md  ngsolve_offdiag_check.py  ngsolve_offdiag_investigation.md  physics_depth_roadmap.md  pluggable.md  reliability_roadmap.md  roadmap_phase5_stretch.md  roadmap_v0.3_modulation.md  roadmap_v0.5_integration_photonics.md
docs/audit/: 2026-06-01-adversarial-audit.md  2026-06-01-revalidation-audit.md  2026-06-07-fdtd-extensions-audit.md  2026-06-07-full-codebase-audit.md  2026-06-09-audit-v2.md  2026-06-09-exhaustive-audit.md  2026-07-05-deep-audit.md  2026-07-17-exhaustive-audit.md
dynameta/: __init__.py  analysis.py  cache.py  constants.py  numba_env.py  pipeline.py  results.py  sweep.py  transient_optics.py  viz.py
dynameta/carriers/: __init__.py  ac_analysis.py  carrier_heating.py  contact_current.py  dc_solve.py  density_gradient.py  devsim_3d.py  devsim_layered.py  einstein.py  electrostatics.py  electrostatics_fem.py  electrothermal.py  eq_registry.py  fem_mesh.py  impact_ionization.py  lc_director.py  lc_director_2d.py  lc_dynamics.py  llg.py  mobility.py  physics_bipolar_dd.py  physics_density_gradient.py  physics_drift_diffusion.py  physics_equilibrium.py  qcse.py  schrodinger_poisson.py  sp_carrier.py  switching.py  thermal.py  thermal_fem.py  transient.py
dynameta/core/: __init__.py  alignment.py  backend.py  bridge.py  carrier_field.py  effects.py  eps_field.py  graphene.py  interfaces.py  layered.py  lift.py  n_to_eps.py  numerics.py  resample.py  units.py
dynameta/design/: __init__.py  design.py  electrode.py  layer.py  materials.py  mesh_spec.py  optical_spec.py  sweep.py
dynameta/drivers/: __init__.py  reliability_glue.py  state_glue.py
dynameta/geometry/: __init__.py  cross_section.py  design.py  electrode.py  specs.py  stack.py  unit_cell.py
dynameta/io/: __init__.py  store.py
dynameta/materials/: __init__.py  db.py  material.py  mechanical.py  optical_model.py  scattering.py  transport_model.py
dynameta/optics/: __init__.py  aaa_poles.py  amp_noise.py  bic.py  eps_assembler.py  fdtd.py  fdtd_mo.py  fdtd_nd.py  fdtd_seam.py  gain_medium.py  harmonics.py  hot_carrier.py  hydro_fdtd.py  hydro_fem.py  inverse_design.py  (+12 more)
examples/: README.md  byo_carrier_solver.py  byo_optical_geometry.py  electrothermal_reliability.py  lc_voltage_tuning.py  llg_faraday_rotation.py  lumenairy_gated_grating.py  park_2021.py  pcm_reflectance_switching.py
tests/: conftest.py  test_aaa_poles.py  test_audit_2026_07_17_infra.py  test_audit_guards.py  test_backend.py  test_bic_capstone.py  test_bic_vortex.py  test_bridge.py  test_carrier_field_io.py  test_carrier_heating.py  test_carriers_gfactor.py  test_contact_current.py  test_data_model.py  test_density_gradient.py  test_devsim_smoke.py  test_dielectric_db.py  test_drivers.py  test_effects.py  test_electrostatics.py  test_electrothermal.py  test_fano.py  test_fdtd_chi2_raman.py  test_fdtd_cuda.py  test_fdtd_effect_hook.py  test_fdtd_hot_carrier.py  test_fdtd_mixing.py  test_fdtd_mo_oblique.py  test_fdtd_nonuniform.py  test_fdtd_seam.py  test_fdtd_time_varying.py  test_fem_drivers.py  test_fiber_amp.py  test_fiber_chain.py  test_fiber_eryb.py  test_fiber_gnlse.py  test_fiber_lma.py  test_fiber_nonlinear.py  test_fiber_srs.py  test_fiber_thermal_feedback.py  test_gated_builder.py  (+48 more)
validation/: _dg_hard_wall_wip.py  _reference_device.py  ac_capacitance.py  ac_diode.py  adversarial_oblique_lossy.py  adversarial_oblique_patch.py  adversarial_pipeline_3d.py  audit_optics_fixes.py  backend_autodiff.py  bandwidth_cv.py  bic_capstone.py  bipolar_diode.py  bipolar_diode_2d.py  bloch_detection.py  boundary_inclusion_corner_circle.py  boundary_inclusion_grating.py  bridge_3d_field.py  burstein_moss_blueshift.py  carrier_heating_enz.py  carriers_3d.py  carriers_3d_bipolar.py  carriers_3d_dd.py  carriers_3d_field.py  carriers_3d_from_design.py  carriers_3d_inclusion.py  carriers_3d_multidielectric.py  carriers_3d_multisemi.py  carriers_3d_patch.py  carriers_3d_resistor.py  conical_dense.py  conical_ppol_vs_tmm.py  conical_structured.py  contact_current_drivers.py  dd_field_mobility.py  density_gradient_dead_layer.py  dg_dd_in_newton.py  drude_matthiessen_kane.py  electrostatics_fem.py  electrothermal_picard.py  fdtd_2d_autodiff.py  (+170 more)
(+100 files in other folders)
