[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynameta"
version = "0.4.0"
description = "DynaMeta: declarative multi-physics simulation library for tunable metasurface modulators (DEVSIM carrier transport + Drude + NGSolve-FEM / TMM / FDTD optics, modulation mechanisms, LC director dynamics)."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Metacept / Neurophos"}]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
# Core data model + bridge (`import dynameta`) is pure numpy/scipy. The heavy
# solver stack and IO backends are optional extras (see below).
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
solvers = ["devsim>=2.10", "ngsolve>=6.2", "gmsh>=4.11"]   # Stage-1 DEVSIM + Stage-3 NGSolve
io = ["h5py>=3.8", "zarr>=3.0; python_version>='3.11'"]    # CarrierField / eps dump+load (zarr 3.x needs py>=3.11)
plot = ["matplotlib>=3.7"]
materials-db = ["jarvis-tools", "mp-api"]                  # DielectricDB live backends
dev = ["pytest>=7.0", "pytest-cov", "ruff", "tmm"]
# Everything: pip install dynameta[solvers,io,plot,materials-db]

[tool.setuptools.packages.find]
include = ["dynameta*"]
