[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynameta"
version = "0.7.1"
description = "DynaMeta: declarative multi-physics simulation library for tunable metasurface modulators (DEVSIM carrier transport + Drude + NGSolve-FEM / TMM / FDTD optics, modulation mechanisms, LC director dynamics)."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Metacept / Neurophos"}]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
# Core data model + bridge (`import dynameta`) imports as pure numpy/scipy; lumenairy
# (the RCWA/PMM optical backends) is REQUIRED but loaded lazily at solver-call time.
# The heavy carrier/FEM solver stack and IO backends remain optional extras (see below).
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "lumenairy>=5.22",                                     # RCWA/PMM/Berreman/BOR backends (optics.lumenairy_bridge) -- core since v0.5; the audited bridge fixes were validated against 5.22 ONLY (single floor: lumenairy_bridge/_common.VERSION_FLOOR)
]

[project.optional-dependencies]
solvers = ["devsim>=2.10", "ngsolve>=6.2", "gmsh>=4.11"]   # Stage-1 DEVSIM + Stage-3 NGSolve
io = ["h5py>=3.8", "zarr>=3.0; python_version>='3.11'"]    # CarrierField / eps dump+load (zarr 3.x needs py>=3.11)
plot = ["matplotlib>=3.7"]
materials-db = ["jarvis-tools", "mp-api", "refractiveindex"]  # DielectricDB + refractiveindex.info lookup
reference = ["tmm"]                                        # coherent-TMM oracle (optics.tmm_reference)
lumenairy = []                                             # back-compat alias: lumenairy is now a CORE dependency
dev = ["pytest>=7.0", "pytest-cov", "ruff", "tmm"]
# Everything: pip install dynameta[solvers,io,plot,materials-db]

[tool.setuptools.packages.find]
include = ["dynameta*"]

[tool.pytest.ini_options]
markers = [
    "slow: full validation-suite wrappers excluded from the fast CI legs (covered by the py3.13 smoke tier; run with -m slow)",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# audit S5-17: pin the lint surface actually enforced. F = real defects (undefined names, unused
# imports/vars); the E7xx statement-style family is deliberately excluded (semicolon-compact
# physics style is the house convention).
select = ["F", "E9"]
